creating file ejs and creating file seeder for car and categories

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,106 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<% include ./partials/header %>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">About Us</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+      <li><a href="#">About Us</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+      </nav>
+      </div>
+      <div id="index-banner" class="parallax-container">
+      <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+      <h1 class="header center purple-text text-accent-4">CAR RENT FOR EVERY ONE</h1>
+        <div class="row center">
+          <h5 class="header col s12 light grey-text text-lighten-5">A modern car retal site app for everyone</h5>
+        </div>
+        <div class="row center">
+          <a href="/rents" id="download-button" data-position="left" data-delay="50" data-tooltip="Click Here!" class="btn tooltipped btn-large waves-effect waves-light pink darken-4">Explore Now</a>
+        </div>
+        <br><br>
+
+      </div>
+      </div>
+      <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+      </div>
+
+
+      <div class="container">
+      <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center blue-text"><i class="material-icons">loyalty</i></h2>
+            <h5 class="center">Speeds up service experience</h5>
+
+            <p class="light">Kami berdiri karena memiliki dedikasi tinggi terhadap kebutuhan anda. Kami ada untuk menjawab keinginan anda dalam memesan mobil yang anda inginkan.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center blue-text"><i class="material-icons">thumb_up</i></h2>
+            <h5 class="center">User Experience Focused</h5>
+
+            <p class="light">Kami selalu berusaha untuk memenuhi seluruh keinginan anda dalam pencarian mobil sesuai hati anda. Kami selalu memberikan pelayanan terbaik, anda adalah hal yang paling berharga buat kami. Pengalaman anda akan menjadi kunci utama kami untuk mencapai tujuan kepuasan.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center blue-text"><i class="material-icons">dialer_sip</i></h2>
+            <h5 class="center">Easy to apply without worry</h5>
+
+            <p class="light">Kami tidak mau membuang waktu anda, persayaratan kami tidak akan menjadikan anda bertambah pusing. Nikmatilah kemudahan dari kami ini hanya dengan meng-klik 'Explore Now'</p>
+          </div>
+        </div>
+      </div>
+
+      </div>
+      </div>
+
+
+      <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">Everything car for you need</h5>
+        </div>
+      </div>
+      </div>
+      <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+      </div>
+
+      <div class="container">
+      <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Contact Us</h4>
+          <p class="left-align light">Jangan sia-siakan kesempatan yang baik ini, segera angkat telepon anda atau pesan dari site ini langsung, nanti petugas kami akan menghubungi anda. Nikmati berbagai kemudahan dalam pembayaran sewa mobil dari kami dan akan selalu ada kejutan untuk anda.</p>
+        </div>
+      </div>
+
+      </div>
+      </div>
+
+
+      <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">Don't worry we are always for you</h5>
+        </div>
+      </div>
+      </div>
+      <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+      </div>
+
+<% include ./partials/footer %>
