membuat file car

--- a/views/cars/navbar.ejs
+++ b/views/cars/navbar.ejs
@@ -1,12 +1,15 @@
-<ul class="right hide-on-med-and-down">
-<li><a href="#">Experience</a></li>
-  <li><a href="#">About Us</a></li>
-</ul>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/">Home</a></li>
+        <li><a href="/cars">Car</a></li>
+      </ul>
 
-<ul id="nav-mobile" class="side-nav">
-<li><a href="#">Experience</a></li>
-<li><a href="#">About Us</a></li>
-</ul>
-<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-</div>
-</nav>
+      <ul id="nav-mobile" class="side-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/cars">Car</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col l12 m12 s12">
