--- a/views/categories/navbar.ejs
+++ b/views/categories/navbar.ejs
@@ -1,11 +1,11 @@
 <ul class="right hide-on-med-and-down">
-<li><a href="#">Experience</a></li>
-  <li><a href="#">About Us</a></li>
+<li><a href="/">Home</a></li>
+  <li><a href="/categories">Category</a></li>
 </ul>
 
 <ul id="nav-mobile" class="side-nav">
-<li><a href="#">Experience</a></li>
-<li><a href="#">About Us</a></li>
+<li><a href="/">Home</a></li>
+<li><a href="/categories">Category</a></li>
 </ul>
 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 </div>
