--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,18 +14,18 @@
       <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-      <h1 class="header center purple-text text-accent-4">CAR RENT FOR EVERY ONE</h1>
+      <h1 class="header center gray-text text-lighten-3">CAR RENT FOR EVERY ONE</h1>
         <div class="row center">
           <h5 class="header col s12 light grey-text text-lighten-5">A modern car retal site app for everyone</h5>
         </div>
         <div class="row center">
-          <a href="/rents" id="download-button" data-position="left" data-delay="50" data-tooltip="Click Here!" class="btn tooltipped btn-large waves-effect waves-light pink darken-4">Explore Now</a>
+          <a href="/cars" id="download-button" data-position="left" data-delay="50" data-tooltip="Click Here!" class="btn tooltipped btn-large waves-effect waves-light pink darken-4">GET START</a>
         </div>
         <br><br>
 
       </div>
       </div>
-      <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+      <div class="parallax"><img src="http://st.gde-fon.com/wallpapers_original/386478_gorod_maket_razmytie_1680x1050_www.Gde-Fon.com.jpg" alt="Unsplashed background img 1"></div>
       </div>
 
 
@@ -74,7 +74,7 @@
         </div>
       </div>
       </div>
-      <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+      <div class="parallax"><img src="http://wallpapercave.com/wp/dIg5Taq.jpg" alt="Unsplashed background img 2"></div>
       </div>
 
       <div class="container">
@@ -100,7 +100,7 @@
         </div>
       </div>
       </div>
-      <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+      <div class="parallax"><img src="http://www.artsfon.com/pic/201412/1920x1080/artsfon.com-41135.jpg" alt="Unsplashed background img 3"></div>
       </div>
 
 <% include ./partials/footer %>
