--- a/views/transactions/add.ejs
+++ b/views/transactions/add.ejs
@@ -1,16 +1,33 @@
 <% include ../partials/header %>
 <% include navbar %>
-  <div class="container">
+  <div class="container" style="padding: 100px;">
     <div class="row">
       <div class="col l12 m12 s12">
         <div class="row">
-          <div class="input-field s10">
-            <input id="first_name" type="text" class="validate" name="">
-            <label for=""></label>
+          <form class="" action="/transaction/index" method="post">
+            <div class="input-field s10">
+              <label for=""></label><br>
+              <input id="user_name" type="text" class="validate" name="user_name" placeholder="input username">
+            </div>
+            <div class="input-field s10">
+              <input id="start_date" type="date" class="validate" name="start_date"placeholder="input tanggal mulai">
+            </div>
+            <div class="input-field s10">
+              <input id="finish_date" type="date" class="validate" name="finish_date" placeholder="input tanggal selesai">
+            </div>
+            <p>
+              <input name="driver" type="radio" id="test1" value="true"/>
+              <label for="test1">Driver</label>
+            </p>
+            <p>
+              <input name="driver" type="radio" id="test2" value="false"/>
+              <label for="test2">No Driver</label>
+            </p>
+            <p>
+            </div>
+            <button type="submit" name="button"><a class="waves-effect waves-light btn">submit</a></button>
           </div>
-        </div>
+          </form>
       </div>
     </div>
   </div>
-
-<% include ../partials/footer %>
