--- a/views/transactions/index.ejs
+++ b/views/transactions/index.ejs
@@ -1,1 +1,49 @@
-
+<% include ../partials/header %>
+<% include navbar %>
+  <div class="container">
+    <div class="row">
+      <div class="col l7 s7">
+        <div class="container">
+          <div class="row">
+            <div class="col s12 m12">
+              <a href="/kantors/add" class="btn-floating btn-flatwave-effect waves-light blue" ><i class="material-icons">add</i></a>
+              <hr>
+              <table class="stripped responsive-table">
+                <thead>
+                  <tr>
+                    <th>NO</th>
+                    <th>NAMA</th>
+                    <th>JUMLAH KARYAWAN</th>
+                    <th>NAMA GEDUNG</th>
+                    <th>ACTION</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% let i=1; result.forEach((item)=> { %>
+                    <tr>
+                      <td>
+                        <%= i++ %>
+                      </td>
+                      <td>
+                        <%= item.nama %>
+                      </td>
+                      <td>
+                        <%= item.jml_karyawan %>
+                      </td>
+                      <td>
+                        <%= item.Gedung.nama %>
+                      </td>
+                      <td>
+                          <a href="/kantors/delete/<%= item.id %>" class="waves-effect btn red" onclick="return confirm('Are you sure you want to delete this item?');">
+                            <i class="material-icons">delete</i></a>
+                      </td>
+                    </tr>
+                  <% }) %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
